# Neural-networks-brain-tumor-segmentation

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
models/UNet2D/src/: .dockerignore  config.py  data-inspection.ipynb  dataset.py  helper.py  inference.py  metrics.py  model.py  model_creation.py  models.py  preprocess.py  pyproject.toml  run.sh  train.py  trainer.py  training_utils.py
src/: data-inspection.ipynb  helper.py  inference.py  model.py  preprocess.py  training.ipynb
